plugins {
    alias(libs.plugins.shadow) apply false
}

allprojects {
    group = 'gloomlib'
    version = '1.0.0.0'

    repositories {
        mavenCentral()
        maven { url = "https://repo.papermc.io/repository/maven-public/" }
        maven { url = "https://oss.sonatype.org/content/groups/public/" }
        maven { url = 'https://repo.extendedclip.com/releases/' }
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'checkstyle'
    apply plugin: 'jacoco'
    apply plugin: 'idea'

    java {
        toolchain.languageVersion = JavaLanguageVersion.of(21)
        withJavadocJar()
        withSourcesJar()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 21
        options.compilerArgs.addAll(['-Xlint:unchecked', '-Xlint:deprecation'])
    }

    testing {
        suites {
            test {
                useJUnitJupiter()
            }
        }
    }

    dependencies {
        compileOnly libs.jetbrains.annotations
        compileOnly libs.paper.api

        testImplementation libs.paper.api
        testImplementation platform(libs.junit.bom)
        testImplementation libs.junit.jupiter
        testImplementation libs.mockito.core
        testImplementation libs.mockito.junit.jupiter
    }

    idea {
        module {
            downloadSources = true
            downloadJavadoc = true
        }
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }

        repositories {
            maven { url = layout.buildDirectory.dir("repo") }
        }

    }

    checkstyle {
        toolVersion = libs.versions.checkstyle.get()
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        ignoreFailures = true
    }

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
    }

    javadoc {
        options.encoding = 'UTF-8'
        options.charSet = 'UTF-8'
    }
}